Finished the project

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,19 +8,43 @@ body{
 	background-color: black;
 }
 
+html{
+	text-align: center;
+}
+
 h1{
 	font-size: 50px;
 	font-family: Verdana;
 	color: white;
-	text-align: center;
 }
 
 a {
 	color: aquamarine;
 	font-size: 16px;
-	text-align: center;
 }
 
-header{
-	text-align: center;
+h2{
+	font-size: 42px;
+	font-family: Verdana;
+	font-weight: 300;
+	color: white;
 }
+
+p{
+	font-family: Verdana;
+	color: grey;
+	font-size: 21px;
+}
+
+img{
+	padding: 20px;
+}
+
+span{
+	color: grey;
+}
+
+footer{
+	text-align: right;
+}
+
